samples/_failures_safe/1761609442_9b8ad8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4e2742b.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_e4e2742b.c:188:29: error: expected ‘;’ at end of input
  188 |                     neighbor
      |                             ^
      |                             ;
./samples/SAFE/__tmp_e4e2742b.c:188:21: error: expected declaration or statement at end of input
  188 |                     neighbor
      |                     ^~~~~~~~
./samples/SAFE/__tmp_e4e2742b.c:188:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4e2742b.c:188:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4e2742b.c:188:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4e2742b.c:188:21: error: expected declaration or statement at end of input
